# TaDIgA

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
scripts/: do-configure-macos.sh
src/: CMakeLists.txt  TADIGA_Main.cpp  tadiga.cc  tadiga.h  tadiga_IGES_geometry.cc  tadiga_IGES_geometry.h  tadiga_NURBS_geometry.cc  tadiga_factory.cc  tadiga_factory.h  tadiga_geometry.cc  tadiga_geometry.h  tadiga_geometry_factory.cc  tadiga_geometry_factory.h  tadiga_main.cc  tadiga_parser.cc  tadiga_parser.h
src/test/: CMakeLists.txt  tadiga_IGES_geometry_test.cc  tadiga_NURBS_geometry_test.cc  tadiga_factory_test.cc  tadiga_geometry_test.cc  tadiga_parser_test.cc  tadiga_standard_test_main.cc  test.igs
